arreglar filtro busqueda

--- a/angular10/src/app/app.component.html
+++ b/angular10/src/app/app.component.html
@@ -4,17 +4,20 @@
     <mat-card-title>{{direccion.result[0].name.first}}</mat-card-title>
     <mat-card-subtitle>{{direccion.result[0].gender}}</mat-card-subtitle>
   </mat-card-header>
-  <img mat-card-image src={{direccion.result[0].picture.large}} width="50px" height="50px">
+  <img mat-card-image src={{direccion.result[0].picture.large}} width="85px" height="85px">
   <mat-card-content>
-    <p>
-      The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-      A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-      bred for hunting.
-    </p>
+
+<p>Juan Juanito, Juan juanito el Golondrina</p><p>
+Amigo de los gallos y de las gallinas</p><p>
+Ay, lorongo, lorongo, lorongo</p><p>
+Con ese cigarrito qué bien me pongo</p><p>
+Juan Juanito, Juan juanito el Golondrina</p><p>
+Amigo de los gallos y de las gallinas</p><p>
+Ay, lorongo, lorongo, lorongo</p>
+
   </mat-card-content>
   <mat-card-actions>
     <button mat-button (click)="recargar()">Recargar</button>
     <button mat-button>ª</button>
   </mat-card-actions>
 </mat-card>
-
