--- a/angular15_chat_/src/app/app.component.html
+++ b/angular15_chat_/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-lg-4">
-    <form #f="ngForm">
+     <form > <!-- #f="ngForm" -->
     <div class="form-group">
       <label for="id">IDENTIFICADOR</label>
       <input type="text" name="id" id="id"
@@ -12,7 +12,7 @@
       id="nombre" class="form-control" placeholder="Enter Nombre" aria-describedby="helpId" >
     </div>
   </form>
-  <button class="btn btn-info m-2" (click)="EnviarMensaje(f)">Enviar mensajes</button>
-  <button class="btn btn-danger m-2" (click)="LeerMensajes(f)">Leer mensajes</button>
+  <!-- <button class="btn btn-info m-2" (click)="EnviarMensaje(f)">Enviar mensajes</button>
+  <button class="btn btn-danger m-2" (click)="LeerMensajes(f)">Leer mensajes</button> -->
   <!-- <button class="btn btn-primary m-2" (click)="refrescar()">Refrescar</button> -->
 </div>
