--- a/angular16/src/app/login/login.component.html
+++ b/angular16/src/app/login/login.component.html
@@ -1,27 +1,24 @@
-<!-- <a routerLink="chat" class="btn btn-danger">chat</a> -->
-
+<!-- <a routerLink="chat" class="btn btn-danger">Chat</a>
+<a routerLink="registro" class="btn btn-info">Registro</a> -->
+<!-- <button class="btn btn-info" (click)="logeo()">Login</button> -->
 
 <div class="container">
   <div class="row">
     <div class="col-lg-12">
 
-    <div class="form-group">
-      <label for="email">email</label>
-      <input type="text" name="email" id="email" class="form-control" placeholder="" aria-describedby="helpId" [(ngModel)]="usuario.email">
-    </div>
-    <div class="form-group">
-      <label for="password">password</label>
-      <input type="text" name="password" id="password" class="form-control" placeholder="" aria-describedby="helpId" [(ngModel)]="usuario.password">
-    </div>
-<div class="text-center">
-  <a routerLink="registro" class="btn btn-info">registro</a>
-  <a routerLink="chat" (click)="login()" class="btn btn-danger">Loguear</a>
-
+      <div class="form-group">
+        <label for="email">Email</label>
+        <input type="text" name="email" id="email" class="form-control" placeholder="Teclea email" aria-describedby="helpId" [(ngModel)]="usuario.email">
+      </div>
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" name="pwd" id="pwd" class="form-control" placeholder="Teclea password" aria-describedby="helpId" [(ngModel)]="usuario.pwd">
+      </div>
+      <div class="text-center">
+       <button class="btn btn-danger m-2"  (click)="logeo(usuario)">Login</button>
+       <!-- <button class="btn btn-info m-2" (click)="logeoNoa()">LoginNoa</button> -->
+       <a routerLink="/chat2" class="btn btn-success m-2"  >Chat</a>
+       <a routerLink="/registro" class="btn btn-primary">Registrar</a>
       </div>
     </div>
   </div>
-</div>
-
-
-
-
