--- a/angular16/src/app/registro/registro.component.html
+++ b/angular16/src/app/registro/registro.component.html
@@ -2,26 +2,22 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-12">
-
-    <div class="form-group">
-      <label for="nombre">nombre</label>
-      <input type="text" name="nombre" id="nombre" class="form-control" placeholder="" aria-describedby="helpId" [(ngModel)]="usuario.nombre">
+      <div class="form-group">
+        <label for="nombre">Nombre</label>
+        <input type="text" name="nombre" id="nombre" class="form-control" placeholder="Teclea nombre" aria-describedby="helpId" [(ngModel)]="usuario.nombre">
+      </div>
+      <div class="form-group">
+        <label for="email">Email</label>
+        <input type="text" name="email" id="email" class="form-control" placeholder="Teclea email" aria-describedby="helpId" [(ngModel)]="usuario.email">
+      </div>
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" name="pwd" id="pwd" class="form-control" placeholder="Teclea password" aria-describedby="helpId" [(ngModel)]="usuario.pwd">
+      </div>
+      <div class="text-center">
+       <button class="btn btn-danger m-2" (click)="Registrar(usuario)">Registrar</button>
+       <a routerLink="/" class="btn btn-primary">Volver</a>
+      </div>
     </div>
-    <div class="form-group">
-      <label for="email">email</label>
-      <input type="text" name="email" id="email" class="form-control" placeholder="" aria-describedby="helpId" [(ngModel)]="usuario.email">
-    </div>
-    <div class="form-group">
-      <label for="password">password</label>
-      <input type="text" name="password" id="password" class="form-control" placeholder="" aria-describedby="helpId" [(ngModel)]="usuario.password">
-    </div>
-<div class="text-center">
-<button class="btn btn-danger m-2" (click)="registrar(usuario)">Registrar</button>
-<a routerLink="/" class="btn btn-info">volver a login</a>
-
-</div>
-    </div>
-
   </div>
-
 </div>
