angular16 chat con filtro y deso

--- a/angular16/src/app/login/login.component.html
+++ b/angular16/src/app/login/login.component.html
@@ -19,6 +19,8 @@
        <!-- <button class="btn btn-info m-2" (click)="logeoNoa()">LoginNoa</button> -->
        <a routerLink="/chat2" class="btn btn-success m-2"  >Chat</a>
        <a routerLink="/registro" class="btn btn-primary">Registrar</a>
+       <a routerLink="/tablaMaterial" class="btn btn-info m-2">Tabla material</a>
+
       </div>
     </div>
   </div>
