--- a/angular16/src/app/chat/chat.component.html
+++ b/angular16/src/app/chat/chat.component.html
@@ -1,1 +1,44 @@
-<a routerLink="/" class="btn btn-info">Salir</a>
+<h3>Usuario: {{nombreUsuario}}</h3>
+<div class="container">
+<div class="row">
+
+  <div class="col-lg-12">
+
+    <div class="form-group">
+      <label for="mensaje">Mensaje</label>
+      <input type="text" name="mensaje" id="mensaje"
+       class="form-control" placeholder="Teclea mensaje" aria-describedby="helpId"
+       [(ngModel)]="msg.mensaje">
+
+    </div>
+<button class="btn btn-danger m-2" (click)="EnviarMensaje()">Enviar</button>
+<button class="btn btn-info m-2" (click)="LeerMensaje()">Leer</button>
+<a routerLink="/" class="btn btn-info m-2">Salir</a>
+
+<!-- tabla para mostrar los mensajes -->
+<table class="table table-bodered table-striped">
+  <thead>
+    <tr>
+      <th>ID</th>
+      <th>HORA/FECHA</th>
+      <th>USUARIO</th>
+      <th>MENSAJE</th>
+    </tr>
+  </thead>
+  <tbody>
+     <tr *ngFor="let chat of Mensajes">
+
+      <td>{{chat.id}}</td>
+      <td>{{chat.fecha}}</td>
+      <td>{{chat.usuario}}</td>
+      <td>{{chat.mensaje}}</td>
+    </tr>
+
+  </tbody>
+</table>
+
+  </div>
+</div>
+
+</div>
+
