--- a/angular16/src/app/login/login.component.html
+++ b/angular16/src/app/login/login.component.html
@@ -16,7 +16,7 @@
       </div>
       <div class="text-center">
        <button class="btn btn-danger m-2"  (click)="logeo(usuario)">Login</button>
-       <!-- <button class="btn btn-info m-2" (click)="logeoNoa()">LoginNoa</button> -->
+        <button class="btn btn-info m-2" (click)="logeoNoa()">LoginNoa</button>
        <a routerLink="/chat2" class="btn btn-success m-2"  >Chat</a>
        <a routerLink="/registro" class="btn btn-primary">Registrar</a>
        <a routerLink="/tablaMaterial" class="btn btn-info m-2">Tabla material</a>
