--- a/angular16/src/app/tabla-material/tabla-material.component.html
+++ b/angular16/src/app/tabla-material/tabla-material.component.html
@@ -12,22 +12,22 @@
       <td mat-cell *matCellDef="let row"> {{row.id}} </td>
     </ng-container>
 
-    <!-- Progress Column -->
-    <ng-container matColumnDef="progress">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Progress </th>
-      <td mat-cell *matCellDef="let row"> {{row.progress}}% </td>
+    <!-- fecha Column -->
+    <ng-container matColumnDef="fecha">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> FECHA/HORA </th>
+      <td mat-cell *matCellDef="let row"> {{row.fecha}}</td>
     </ng-container>
 
     <!-- Name Column -->
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-      <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+    <ng-container matColumnDef="usuario">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> USUARIO </th>
+      <td mat-cell *matCellDef="let row"> {{row.usuario}} </td>
     </ng-container>
 
     <!-- Fruit Column -->
-    <ng-container matColumnDef="fruit">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Fruit </th>
-      <td mat-cell *matCellDef="let row"> {{row.fruit}} </td>
+    <ng-container matColumnDef="mensaje">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> MENSAJE </th>
+      <td mat-cell *matCellDef="let row"> {{row.mensaje}} </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -35,10 +35,10 @@
 
     <!-- Row shown when there is no matching data. -->
     <tr class="mat-row" *matNoDataRow>
-      <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+      <td class="mat-cell" colspan="4">No se han encontrado mensajes con esa busqueda."{{input.value}}"</td>
     </tr>
   </table>
 
-  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+  <mat-paginator [pageSizeOptions]="[10, 25, 50, 100]" aria-label="selecciona bloques"></mat-paginator>
 </div>
 
