--- a/angular16/src/app/chat/chat.component.html
+++ b/angular16/src/app/chat/chat.component.html
@@ -1,22 +1,22 @@
-<h3>Usuario: {{nombreUsuario}}</h3>
+
+<h3>Usuario:{{nombreUsuario}}</h3>
 <div class="container">
-<div class="row">
-
-  <div class="col-lg-12">
-
-    <div class="form-group">
-      <label for="mensaje">Mensaje</label>
-      <input type="text" name="mensaje" id="mensaje"
-       class="form-control" placeholder="Teclea mensaje" aria-describedby="helpId"
-       [(ngModel)]="msg.mensaje">
-
-    </div>
-<button class="btn btn-danger m-2" (click)="EnviarMensaje()">Enviar</button>
-<button class="btn btn-info m-2" (click)="LeerMensaje()">Leer</button>
-<a routerLink="/" class="btn btn-info m-2">Salir</a>
-
-<!-- tabla para mostrar los mensajes -->
-<table class="table table-bodered table-striped">
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="form-group">
+        <label for="mensaje">Mensaje</label>
+        <input type="text" name="mensaje" id="mensaje" class="form-control"
+        placeholder="Teclea mensaje"
+        aria-describedby="helpId"
+        [(ngModel)]="msg.mensaje">
+      </div>
+      <button class="btn btn-info m-2"
+         (click)="EnviarMensaje()">Enviar Mensaje</button>
+      <button class="btn btn-danger m-2"
+         (click)="LeerMensajes()">Leer Mensajes</button>
+      <a routerLink="/" class="btn btn-info m-2">Salir</a>
+ <!-- tabla para mostrar contenido -->
+ <table class="table table-bodered table-striped">
   <thead>
     <tr>
       <th>ID</th>
@@ -36,9 +36,6 @@
 
   </tbody>
 </table>
-
+    </div>
   </div>
 </div>
-
-</div>
-
