--- a/angular16/src/app/login/login.component.html
+++ b/angular16/src/app/login/login.component.html
@@ -1,3 +1,4 @@
+<p>login works!</p>
 <!-- <a routerLink="chat" class="btn btn-danger">Chat</a>
 <a routerLink="registro" class="btn btn-info">Registro</a> -->
 <!-- <button class="btn btn-info" (click)="logeo()">Login</button> -->
@@ -15,12 +16,11 @@
         <input type="password" name="pwd" id="pwd" class="form-control" placeholder="Teclea password" aria-describedby="helpId" [(ngModel)]="usuario.pwd">
       </div>
       <div class="text-center">
-       <button class="btn btn-danger m-2"  (click)="logeo(usuario)">Login</button>
-        <button class="btn btn-info m-2" (click)="logeoNoa()">LoginNoa</button>
-       <a routerLink="/chat2" class="btn btn-success m-2"  >Chat</a>
-       <a routerLink="/registro" class="btn btn-primary">Registrar</a>
-       <a routerLink="/tablaMaterial" class="btn btn-info m-2">Tabla material</a>
-
+       <!-- <button class="btn btn-danger m-2" (click)="logeo(usuario)">Login</button> -->
+       <button class="btn btn-info m-2" (click)="logeoNoa()">Entrar</button>
+       <!-- <a routerLink="/chat2" class="btn btn-success m-2"  >Chat</a> -->
+       <a routerLink="/registro" class="btn btn-primary m-2">Registrar</a>
+       <a routerLink="/tablaMaterial" class="btn btn-info m-2">Mostrar Tabla</a>
       </div>
     </div>
   </div>
