--- a/angular16/src/app/tabla-material/tabla-material.component.html
+++ b/angular16/src/app/tabla-material/tabla-material.component.html
@@ -1,3 +1,4 @@
+
 <mat-form-field>
   <mat-label>Filter</mat-label>
   <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
@@ -12,21 +13,21 @@
       <td mat-cell *matCellDef="let row"> {{row.id}} </td>
     </ng-container>
 
-    <!-- fecha Column -->
+    <!-- fecha hora Column -->
     <ng-container matColumnDef="fecha">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> FECHA/HORA </th>
-      <td mat-cell *matCellDef="let row"> {{row.fecha}}</td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha/hora </th>
+      <td mat-cell *matCellDef="let row"> {{row.fecha}} </td>
     </ng-container>
 
     <!-- Name Column -->
     <ng-container matColumnDef="usuario">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> USUARIO </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Usuario </th>
       <td mat-cell *matCellDef="let row"> {{row.usuario}} </td>
     </ng-container>
 
     <!-- Fruit Column -->
     <ng-container matColumnDef="mensaje">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> MENSAJE </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Mensaje </th>
       <td mat-cell *matCellDef="let row"> {{row.mensaje}} </td>
     </ng-container>
 
@@ -35,10 +36,10 @@
 
     <!-- Row shown when there is no matching data. -->
     <tr class="mat-row" *matNoDataRow>
-      <td class="mat-cell" colspan="4">No se han encontrado mensajes con esa busqueda."{{input.value}}"</td>
+      <td class="mat-cell" colspan="4">No hay coincidencias "{{input.value}}"</td>
     </tr>
   </table>
 
-  <mat-paginator [pageSizeOptions]="[10, 25, 50, 100]" aria-label="selecciona bloques"></mat-paginator>
+  <mat-paginator [pageSizeOptions]="[10, 20, 30, 100]" aria-label="seleccionar bloques"></mat-paginator>
 </div>
 
